_site/sql/hive/src/test/resources/ql/src/test/queries/negative/unknown_column5.q
FROM src
INSERT OVERWRITE TABLE dest1 SELECT '1234', src.value WHERE dummysrc.key < 100 group by src.key
